--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
-.heading{
+.header{
     width: 100%;
     font-size: 15px;
 }
-.footer{
-    top: 500;
-    color: blue;
+.copy_right_footer{
+    position: fixed;
     background-color: grey;
     width: 100%;
+    bottom: 0;
     text-align: center;
+    line-height: 3;
+    color:midnightblue;
 }
-#camera{
-    background-color: ivory;
+canvas{
+    box-shadow: 5px,5px,5px,5px,grey;
+    border-radius: 20px;
+    border:5px solid white;
 }
